# CSswitch

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.en.md  README.md
.agents/context/: README.md  current-release.md  document-audit.md  known-issues.md  verified-state.md  worktrees.md
.agents/handoffs/: README.md
.agents/rules/: README.md  external-skills.md  git-worktrees.md  release.md  safety.md  science-runtime.md  system-ssh.md  testing-and-evidence.md
catalog/: capabilities.v1.json
desktop/: package-lock.json  package.json
desktop/gateway/: Cargo.toml
desktop/gateway/src/: auth.rs  codex_models.rs  codex_network.rs  codex_transport.rs  config.rs  connect.rs  lib.rs  main.rs  messages.rs  models.rs  policy.rs  science_control.rs  server.rs  skill_install.rs
desktop/gateway/src/codex_auth/: cli.rs  login_async.rs  mod.rs  oauth.rs
desktop/gateway/tests/: codex_auth_cli.rs
desktop/skill-package/: Cargo.toml
desktop/skill-package/src/: archive.rs  bundle.rs  github.rs  install.rs  lib.rs  science.rs
desktop/src/: index.html  main.js  skill-mcp-prototype-store.js  skill-mcp-prototype-store.test.js  skill-mcp-prototype.js  styles.css
desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/src/: config.rs  lib.rs
desktop/src-tauri/src/commands/: codex.rs  diagnostics.rs  mod.rs  profiles.rs  runtime.rs  skill_install.rs
desktop/src-tauri/src/runtime/: mod.rs  (+12 more)
docs/: ARCHITECTURE.md  DEVELOPMENT.md  EXTERNAL_SKILL_INSTALL.md  README.md  RELEASE.md  SCIENCE_RUNTIME.md  release-evidence-v0.4.2.md  upgrade-and-rollback.md
docs/architecture/: README.md  overview.md  science-runtime.md
docs/evidence/: README.md
docs/evidence/investigations/: 2026-07-13-science-runtime-and-skill-bridge.md  2026-07-16-codex-acceptance-preparation.md  README.md
docs/evidence/releases/: README.md  v0.4.2.md  v0.5.0.md  v0.8.1-linux-x64.md
docs/features/: README.md  external-skill-bridge.md  system-ssh.md  ui-information-architecture.md
docs/operations/: README.md  development.md  real-machine-acceptance.md  release.md  testing.md  upgrade-and-rollback.md
docs/references/: CSNATIVE.md  README.md
scripts/: launch-virtual-sandbox.sh
scripts/ssh-bridge/: ssh
test/: REAL_MACHINE_TEST.md  real_machine_guard.sh  run-frontend.sh  run-live.sh  run-loopback.sh  run-rust.sh  runtime_status_state.test.mjs  test_capability_catalog.py  test_external_skill_install_bridge.py  test_gateway_rust.py  test_proxy_packaging.py  test_real_machine_guard.sh  test_scripts.sh  test_skill_runtime_boundary.py
(+5 files in other folders)
