[package]
name = "csswitch-gateway"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "csswitch-gateway"
path = "src/main.rs"

[lib]
name = "csswitch_gateway"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde_json = { version = "1", features = ["preserve_order"] }
