[package]
name = "csswitch-gateway"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "csswitch-gateway"
path = "src/main.rs"

[lib]
name = "csswitch_gateway"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
csswitch-skill-install-core = { path = "../skill-package" }
getrandom = "0.2"
hmac = "0.12"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
regex = "1"
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
