[package]
name = "csswitch-gateway"
version = "0.0.0"
edition = "2021"
publish = false

[features]
default = []
acceptance-keychain = []

[[bin]]
name = "csswitch-gateway"
path = "src/main.rs"

[lib]
name = "csswitch_gateway"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
csswitch-codex-network = { path = "../codex-network" }
csswitch-skill-install-core = { path = "../skill-package" }
getrandom = "0.2"
hmac = "0.12"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "socks", "stream"] }
regex = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "time"] }
url = "2"
zeroize = "1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7"
security-framework-sys = "2.17"
