[package]
name = "csswitch-skill-install-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
libc = "0.2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
unicode-normalization = "0.1"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
